# cheese

./: .gitignore  LICENSE.txt  README.md  README_CN.md  gradle.properties  settings.gradle.kts
app/debug/: .gitignore  build.gradle.kts
app/debug/src/main/: AndroidManifest.xml
app/debug/src/main/assets/: sdkconfig.json
app/debug/src/main/res/drawable/: solarlinksquarebold.xml
app/debug/src/main/res/values/: themes.xml
app/release/: build.gradle.kts
app/release/src/main/: AndroidManifest.xml
app/release/src/main/res/values/: strings.xml
core/: build.gradle.kts
core/src/main/: AndroidManifest.xml
core/src/main/res/drawable/: console_x.xml  logcat_icon.xml  rounded_background.xml  run.xml  stop.xml
core/src/main/res/layout/: console.xml  logcat.xml
core/src/main/res/values/: strings.xml
core/src/main/res/xml/: accessibility_config.xml  provider_paths.xml
frontend/javascript/: build.gradle.kts
frontend/javascript/src/main/assets/: init.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mlkit/: build.gradle.kts
mlkit/src/androidTest/java/coco/cheese/mlkit/: ExampleInstrumentedTest.kt
ncnn/: build.gradle.kts
ncnn/src/main/cpp/: CMakeLists.txt  common.cpp  paddleocr_ncnn.cpp  yolov8ncnn.cpp
ncnn/src/main/cpp/opencv-mobile-2.4.13.7-android/sdk/native/jni/: OpenCVModules_arm64_v8a.cmake  OpenCVModules_armeabi_v7a.cmake  OpenCVModules_x86.cmake  OpenCVModules_x86_64.cmake
opencv/: build.gradle.kts
shared/: build.gradle.kts
shared/src/main/cpp/: CMakeLists.txt  shared.cpp
sign/: cheese.jks
(+143 files in other folders)
